--- a/Write-Up.Rmd
+++ b/Write-Up.Rmd
@@ -268,33 +268,32 @@ q2_p2_1 <- top_15 %>%
   annotate("text", x = 600, y = "South Korea", label = "Gold", size = rel(2.4), colour = "#D6AF36") +
   annotate("text", x = 600, y = "Norway", label = "Silver", size = rel(2.4), colour = "#824A02") +
   annotate("text", x = 600, y = "France", label = "Bronze", size = rel(2.4), colour = "#A7A7AD") + 
-  labs(x = "Number of medals won by females", y = "Countries",
+  labs(x = "Number of medals won by females ", y = "Countries",
        caption = " ") +
   theme_minimal() +
   bg_theme +
   theme(panel.grid.major.y = element_blank(),
-        axis.text.y = element_text(size = rel(0.8))) 
+        axis.text.y = element_text(size = rel(0.7))) 
 q2_p2_2 <- top_15 %>% 
   ggplot(aes(x = fp_medal, y = reorder(country, n_medal_1))) +
   geom_segment(aes(yend = country), xend = 0, colour = "#009F3D", size = 0.5, alpha = 0.6) +
   geom_emoji(alias = 'trophy', 
              x = c(top_15$fp_medal[15], top_15$fp_medal[3], top_15$fp_medal[7]), 
              y = c("Romania", "China", "Netherlands"),
-             size = 4, color = "#000000") +
+             size = 4, color = "#009F3D") +
   labs(x = "Proportion of medals won by females", 
        caption = "Source: data from www.sports-reference.com in 2018") + 
   bg_theme +
   theme(axis.title.y = element_blank(),
-        axis.text.y = element_blank(),
+        axis.text.y = element_text(size = rel(0.7)),
         panel.grid.major.y = element_blank()) 
 # Adding two plots together for comparison
-q2_p2 <- plot_grid(q2_p2_1, q2_p2_2, rel_widths = c(4.5, 3),
-                   labels = c("No Nomalization ", "Nomalization"),
-                   ncol = 2, nrow = 1, label_size = 8)
+q2_p2 <- plot_grid(q2_p2_1, q2_p2_2, rel_widths = c(4, 3), nrow = 1,
+                   align = "hv", labels = c("Number", "Percent"), label_size = 9)
 title <- ggdraw() + 
   draw_label("Top 15 countries in female contribution in Olympic Games (2000-2016)",
              fontface = 'bold', x = 0, hjust = -0.2, size = 12) +
-  theme(plot.margin = margin(0, 0, 0, 10))
+  theme(plot.margin = margin(b = 10))
 plot_grid(title, q2_p2, ncol = 1, rel_heights = c(0.1, 1))
 ```
 
